# me

./: .gitignore  docker-compose.yml  package-lock.json  package.json
api/: Cargo.toml  Dockerfile
api/entity/: Cargo.toml
api/entity/src/: entities.rs
api/entity/src/entities/: posts.rs  sessions.rs  users.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_tables.rs
api/src/: app.rs  main.rs
api/src/app/: clients.rs  managers.rs  models.rs  resource_access.rs  utilities.rs
api/src/app/clients/: admin_controller.rs  posts_controller.rs
api/src/app/managers/: auth_manager.rs  posts_manager.rs  user_manager.rs
api/src/app/models/: args.rs  entities.rs  login_response.rs  paginated.rs
api/src/app/models/args/: create_post_args.rs  create_user_args.rs  get_admin_post.rs  get_posts_args.rs  get_posts_query.rs  login_args.rs  update_post_args.rs
api/src/app/models/entities/: post.rs  session.rs  user.rs
api/src/app/resource_access/: post_access.rs  user_access.rs
api/src/app/utilities/: env.rs  model_builder.rs
api/src/app/utilities/authentication/: password_service.rs
api/src/app/utilities/repository/: repository_service.rs
src/: App.tsx  index.scss
src/hooks/: index.ts  useModalController.ts
src/pages/Landing/: Landing.module.scss  Landing.tsx
src/shared/: index.ts
src/shared/Footer/: Footer.tsx
src/shared/IconButton/: IconButton.module.scss  (+1 more)
src/styles/: mixins.scss  variables.scss
ui/: .eslintignore  .eslintrc.json  package-lock.json  package.json
ui/src/: App.tsx  index.scss  index.tsx
(+90 files in other folders)
